tests/errors/multiple_variable_declaration/different_scopes.meth
int x = 5;
{
    str x = "no";
}